--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "Belay",
   "version": "1.0.0",
+  "description": "Belay",
+  "author": "Consume &amp; Create",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -9,8 +11,25 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
+    "lazysizes": "^5.3.2",
     "nuxt": "^2.15.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.4.0",
+    "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.3.2",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.2.0"
+  },
+  "browserslist": [
+    "defaults",
+    "> 1%",
+    "not IE 11",
+    "iOS >= 8"
+  ]
 }
