--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.15.1",
     "lazysizes": "^5.3.2",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
+    "@nuxtjs/style-resources": "^1.2.1",
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "sass": "^1.38.0",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "webp-loader": "^0.6.0"
   },
   "browserslist": [
     "defaults",
