--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^9.0.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "sass": "^1.38.0",
