--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
+    "gsap": "^3.7.1",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^9.0.0",
