--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "lazysizes": "^5.3.2",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-event-horizon": "^2.0.1"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
