--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "lazysizes": "^5.3.2",
+    "lodash.debounce": "^4.0.8",
     "nuxt": "^2.15.7",
     "vue-event-horizon": "^2.0.1"
   },
