--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.22.0",
     "core-js": "^3.15.1",
     "lazysizes": "^5.3.2",
     "lodash.debounce": "^4.0.8",
