--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
     "start": "nuxt start",
+    "serve": "nuxt serve",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -16,8 +16,10 @@
     "core-js": "^3.15.1",
     "lazysizes": "^5.3.2",
     "lodash.debounce": "^4.0.8",
+    "node-sass": "^9.0.0",
     "nuxt": "^2.15.7",
-    "vue-event-horizon": "^2.0.1"
+    "vue-event-horizon": "^2.0.1",
+    "vue-loader": "^15.10.0"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
@@ -25,10 +27,10 @@
     "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
     "gsap": "^3.7.1",
+    "html-webpack-plugin": "^5.6.3",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^9.0.0",
-    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "sass": "^1.38.0",
     "sass-loader": "^10.2.0",
